--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node examples/main.js",
     "dev": "nodemon --watch examples examples/main.js",
+    "start:digit": "node examples/fullDigits.js",
+    "dev:digit": "nodemon --watch examples examples/fullDigits.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
