--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon --watch examples examples/main.js",
     "start:digit": "node examples/fullDigits.js",
     "dev:digit": "nodemon --watch examples examples/fullDigits.js",
+    "start:voice": "node examples/voice.js",
+    "dev:voice": "nodemon --watch examples examples/voice.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
